# libautoptr

./: .gitattributes  Makefile.am  README.md  configure.ac
doc/: Makefile.am
doc/doxygen/: doxygen.cfg
include/: Makefile.am  autoptr.h
include/libautoptr/: Makefile.am
src/: Makefile.am  autoptr.c
tests/: Makefile.am  test_autoptr1.c  test_autoptr2.c  test_autoptr3.c  test_autoptr4.c  test_autoptr5.c  test_common.h
