AM_CFLAGS = -I${top_builddir}/include

check_PROGRAMS = test_autoptr1 test_autoptr2 test_autoptr3 test_autoptr4 test_autoptr5
test_autoptr1_SOURCES = test_autoptr1.c
test_autoptr1_LDADD = $(top_builddir)/libautoptr.la

test_autoptr2_SOURCES = test_autoptr2.c
test_autoptr2_LDADD = $(top_builddir)/libautoptr.la

test_autoptr3_SOURCES = test_autoptr3.c
test_autoptr3_LDADD = $(top_builddir)/libautoptr.la

test_autoptr4_SOURCES = test_autoptr4.c
test_autoptr4_LDADD = $(top_builddir)/libautoptr.la

test_autoptr5_SOURCES = test_autoptr5.c
test_autoptr5_LDADD = $(top_builddir)/libautoptr.la

TESTS = $(check_PROGRAMS)
